utf width change

--- a/static/index.html
+++ b/static/index.html
@@ -10,7 +10,7 @@
     <link href="/main.css" rel="stylesheet">
   </head>
 
-  <body spellcheck="false" data-force-unicode-width="yes">
+  <body spellcheck="false" data-force-unicode-width="no">
     <script src="html-sanitizer.js"></script>
     <script src="main.js"></script>
     <script src="ext.js"></script>
