--- a/static/index.html
+++ b/static/index.html
@@ -14,5 +14,6 @@
     <script src="html-sanitizer.js"></script>
     <script src="main.js"></script>
     <script src="ext.js"></script>
+    <script src="FileSaver.js"></script>
   </body>
 </html>
